[package]
name = "healthcheck-common"
version = "0.1.0"
edition = "2021"
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
serde = { version = "1.0", features = ["serde_derive"] }
csv = "1.2"
