[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc" }
rocket_dyn_templates = { version = "0.1.0-rc", features = ["handlebars"] }
serde = { version = "1.0", features = ["serde_derive"] }
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] } 
dotenv = "0.15"
thiserror = "1.0"

[dependencies.healthcheck-common]
path = "../common"