[package]
name = "healthcheck-pinger"
version = "0.1.0"
edition = "2021"
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
dotenv = "0.15"
thiserror = "1.0"
rust-gmail = { version = "0.1.2", features = ["blocking"] }
