[package]
name = "healthcheck-pinger"
version = "0.1.0"
edition = "2021"
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
dotenv = "0.15"
thiserror = "1.0"
rust-gmail = { version = "0.1", features = ["blocking"] }
serde = { version = "1.0", features = ["serde_derive"] }
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] } 
